# diploma

./: .gitignore  CMakeLists.txt  README.md  config.ini  prepare_for_github.bat  quick_launch.bat
http_server/: CMakeLists.txt  config.cpp  database.cpp  database.h  http_connection.cpp  http_connection.h  main.cpp
spider/: CMakeLists.txt  config.cpp  config.h  database.cpp  database.h  html_parser.cpp  html_parser.h  http_utils.cpp  http_utils.h  link.h  main.cpp
